# star_wars_characters

./: .dockerignore  .gitignore  README.md  docker-compose.yml
.devops/docker/: docker-compose.override.yml.example
.devops/docker/backend/: Dockerfile  entrypoint.sh  start.sh
.devops/docker/frontend/: Dockerfile
.devops/docker/swapi/: Dockerfile
.envs/: .django  .postgresql
backend/: Makefile  manage.py  pyproject.toml  setup.cfg
backend/apps/collections/: __init__.py  apps.py  converters.py  models.py  pagination.py  serializers.py  services.py  urls.py  views.py
backend/apps/collections/migrations/: 0001_initial.py
backend/apps/star_wars_api/: client.py  petl_views.py  urls.py
backend/config/: asgi.py  urls.py  wsgi.py
backend/config/settings/: base.py  local.py  test.py
backend/tests/: conftest.py  factories.py
backend/tests/test_apps/test_collections/: conftest.py  test_converters.py  test_models.py  test_pagination.py  test_serializers.py  test_services.py  test_views.py
backend/tests/test_apps/test_star_wars_api/: conftest.py  test_client.py  test_petl_views.py  test_urls.py
frontend/: README.md  package-lock.json  package.json  quasar.conf.js
frontend/src/: strings.ts
frontend/src/boot/: axios.ts
frontend/src/components/: CollectionListComponent.vue  models.ts
frontend/src/css/: quasar.variables.sass
frontend/src/layouts/: MainLayout.vue
frontend/src/pages/: CollectionDetail.vue  CollectionFieldsCounts.vue  Error404.vue  Index.vue
frontend/src/router/: routes.ts
frontend/src/store/: index.ts
frontend/src/store/characters/: actions.ts  getters.ts  index.ts  interfaces.ts  mutations.ts  state.ts  utils.ts
frontend/src/store/collections/: actions.ts  getters.ts  interfaces.ts  mutations.ts  state.ts  utils.ts
