[tool.poetry]
name = "star_wars_characters"
version = "0.1.0"
description = ""
authors = ["Łukasz Skarżyński <skarzynski_lukasz@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

django = "^3.1"
django-cors-headers = "^3.5.0"
django-environ = "^0.4.5"
django-health-check = "^3.12.1"
petl = "^1.6.3"
psycopg2 = "^2.8.5"
requests = "^2.24.0"
psutil = "^5.7.2"

[tool.poetry.dev-dependencies]
django-extensions = "^3.0.5"
django-querycount = "^0.7.0"
django-stubs = "^1.5.0"
django-test-migrations = "^1.0.0"
flake8-django = "^1.1.1"
ipython = "^7.18.1"
nplusone = "^1.0.0"
wemake-python-styleguide = "^0.14.1"

[build-system]
requires = ["poetry>=1.0.10"]
build-backend = "poetry.masonry.api"
